--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <parent>
         <groupId>net.fhirfactory.pegacorn</groupId>
-        <artifactId>the-pegacorn-project</artifactId>
+        <artifactId>pegacorn</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pegacorn</relativePath>
     </parent>
